--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 html {
-  font-size: 62, 5%;
+  font-size: 62.5%;
   font-family: "Montserrat", sans-serif;
   height: 100%;
 }
@@ -33,7 +33,7 @@ body {
   width: 400px;
   height: 40px;
   text-align: center;
-  font-size: 2.2rem;
+  font-size: 3rem;
   border-radius: 20px;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
@@ -188,7 +188,7 @@ textarea:focus {
 }
 
 .singlePokemon-Name-Clicked {
-  font-size: 2.4rem;
+  font-size: 3rem;
   height: 40px;
   width: 400px;
   display: flex;
@@ -236,7 +236,7 @@ textarea:focus {
 .stat-box {
   display: flex;
   justify-content: space-between;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   width: 320px;
   margin: 6px;
 }
@@ -247,14 +247,14 @@ textarea:focus {
   display: flex;
   justify-content: space-around;
   margin-top: 10px;
-  z-index: 30;
+  z-index: 2;
 }
 
 .info-button {
   background-color: transparent;
   border-color: transparent;
   border-radius: 10px;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
   cursor: pointer;
@@ -274,6 +274,7 @@ textarea:focus {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  font-size: 1.8rem;
 }
 
 .heightandweight {
@@ -312,7 +313,7 @@ textarea:focus {
   left: 20px;
   top: 16px;
   cursor: pointer;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
 }
 
 .backbutton:hover {
@@ -334,6 +335,7 @@ textarea:focus {
 }
 
 .type {
+  font-size: 1.8rem;
   padding: 4px;
   margin: 4px;
   background-color: transparent;
@@ -418,7 +420,7 @@ textarea:focus {
 
 @media (max-width: 880px) {
   .searchInput {
-    font-size: 1.6rem;
+    font-size: 2.2rem;
     width: 280px;
     right: auto;
   }
