--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ textarea:focus {
 
 .clickedPokemon {
   position: absolute;
-  top: 200px;
+  top: 100px;
   width: 400px;
   height: 600px;
   display: flex;
@@ -168,6 +168,15 @@ textarea:focus {
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
     rgba(0, 0, 0, 0.22) 0px 15px 12px;
   z-index: 10;
+}
+
+@media (max-width: 500px) {
+  .clickedPokemon {
+    top: 0;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .clickedPokemon-Section {
