--- a/style.css
+++ b/style.css
@@ -170,15 +170,6 @@ textarea:focus {
   z-index: 10;
 }
 
-@media (max-width: 500px) {
-  .clickedPokemon {
-    top: 0;
-    border-radius: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-
 .clickedPokemon-Section {
   width: 100%;
   height: 100%;
@@ -207,8 +198,8 @@ textarea:focus {
 
 .types-Clicked {
   position: absolute;
-  top: 14px;
-  right: 100px;
+  top: 16px;
+  right: 60px;
   height: 40px;
   display: flex;
   justify-content: center;
@@ -217,7 +208,7 @@ textarea:focus {
 
 .singlePokemon-Number-Clicked {
   position: absolute;
-  top: 20px;
+  top: 26px;
   right: 24px;
 }
 
@@ -247,6 +238,7 @@ textarea:focus {
   justify-content: space-between;
   font-size: 1.8rem;
   width: 320px;
+  min-width: 200px;
   margin: 6px;
 }
 
@@ -289,6 +281,10 @@ textarea:focus {
 .heightandweight {
   width: 320px;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .abilities {
@@ -420,6 +416,35 @@ textarea:focus {
 /*
 * Media queries
 */
+
+@media (max-width: 500px) {
+  .clickedPokemon {
+    top: 0;
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .info-Container,
+  .info-buttons,
+  .stat-box,
+  .others,
+  .heightandweight,
+  .singlePokemon-Name-Clicked {
+    width: 100% !important;
+    max-width: 280px !important;
+  }
+}
+
+@media (max-width: 500px) {
+  .hw-box,
+  .abilities {
+    width: 100% !important;
+    max-width: 200px !important;
+  }
+}
 
 @media (max-width: 1100px) {
   .yourpokedex-Span {
